--- a/cob_manipulator/ros/config/multi_dof_joints.yaml
+++ b/cob_manipulator/ros/config/multi_dof_joints.yaml
@@ -1,5 +1,5 @@
 multi_dof_joints:
-  - name: base_joint
+  - name: dummy_link
     type: Floating
-    parent_frame_id: map #base_footprint #odom_combined
-    child_frame_id: base_footprint
+    parent_frame_id: dummy_link
+    child_frame_id: dummy_link
